# word-aligner

./: .gitignore  README.md  mgiza_word_aligner.py  pyproject.toml
src/word_aligner/: alignment_accuracy_evaluator.py  annotation_transfer.py  config.py  data_processor.py  download_model.py  file_utils.py  github_file_downloader.py  mgiza_word_aligner.py  monlam_tokenizer.py  pipeline.py  tibetan_words_combiner.py  word_list_tokenizer.py  word_tokenizer.py
src/word_aligner/logs/: Failed_to_download_TMs.txt
src/word_aligner/resources/: README.md  bo_en_list.txt  mahavyutpatti.csv  tibetan_english_dict.json  tm_list.txt
tests/: test_example.py  test_tibetan_words_combiner.py  test_tokenize_with_named_entities.py  test_word_list_tokenizer.py
